--- a/web/index.html
+++ b/web/index.html
@@ -28,8 +28,14 @@
 
   <title>manikhwe_herbs</title>
   <link rel="manifest" href="manifest.json">
+  <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-app.js"></script>  
+  <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-auth.js"></script>  
+  <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-firestore.js"></script>  
+  <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-auth.js"></script>  
+  <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-storage.js"></script>
 </head>
 <body>
+  
   <!-- This script installs service_worker.js to provide PWA functionality to
        application. For more information, see:
        https://developers.google.com/web/fundamentals/primers/service-workers -->
@@ -46,7 +52,7 @@
       scriptTag.type = 'application/javascript';
       document.body.append(scriptTag);
     }
-
+    
     if ('serviceWorker' in navigator) {
       // Service workers are supported. Use them.
       window.addEventListener('load', function () {
@@ -98,4 +104,5 @@
     }
   </script>
 </body>
+
 </html>
