--- a/web/index.html
+++ b/web/index.html
@@ -26,7 +26,7 @@
   <meta name="apple-mobile-web-app-title" content="manikhwe_herbs">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
-  <title>manikhwe_herbs</title>
+  <title>Help</title>
   <link rel="manifest" href="manifest.json">
   <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-app.js"></script>  
   <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-auth.js"></script>  
